[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "message_cipher"
version = "1.2.0"
authors = [{ name = "Harry Parkes", email = "harrydparkes@proton.me" }]
description = "A simple cipher package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU AGPL",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hazzery/MessageCipher"
"Bug Tracker" = "https://github.com/hazzery/MessageCipher/issues"

[tool.ruff]
exclude = ["docs/conf.py"]

[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of the pycodestyle (`E`) codes, and  pydocstyle (`D`)
select = ["E4", "E7", "E9", "F", "D", "PL"]
ignore = ["D203", "D213"]
