[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "message_cipher"
authors = [{ name = "Harry Parkes", email = "harrydparkes@proton.me" }]
description = "A simple cipher package"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
]

[project.urls]
"Homepage" = "https://github.com/hazzery/MessageCipher"
"Bug Tracker" = "https://github.com/hazzery/MessageCipher/issues"

[tool.setuptools.dynamic]
version = { attr = "message_cipher.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["message_cipher*"]

[tool.ruff]
exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "EM101", "TRY003", "E501", "PT"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
